--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3-architects</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/icons/fabicon.png" type="image/x-icon">
 </head>
+
 <body>
     <header>
+        <nav>
+            <a href="">G3 Architects</a>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
 
+        <div class="hero">
+            <div class="hero-content">
+                <h2>Brand New Group of Architects</h2>
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomized words which don't look even.
+                </p>
+                <div class="btn-container">
+                    <a href=""><button class="btn">Explore more</button></a>
+                </div>
+            </div>
+
+            <img src="images/banner.png" alt="">
+        </div>
     </header>
 
     <main>
@@ -19,4 +45,5 @@
 
     </footer>
 </body>
+
 </html>
